
2002-02-20  Corey Minyard <minyard@acm.org>

	* controller.c, dataxfer.c, dataxfer.h, ser2net.8:
	Added a "short" display, where each port is shown on one line.
	
2002-02-20  Przemyslaw Czerpak (druzus@polbox.com),
	Corey Minyard <minyard@acm.org>

	* dataxfer.c, dataxfer.h, configure.in, ser2net.c, ser2net.8:
	Added UUCP-style locking for ports.

2002-02-19  Corey Minyard <minyard@acm.org>

	* controller.c, controller.h, dataxfer.c, devcfg.c, ser2net.c,
	ser2net.conf, ser2net.8, utils.c utils.h:
	Added support for specifying the IP address with the port to
	bind to specific interfaces.

	* dataxfer.c: Added counting the input and output bytes.

2002-02-19  Przemyslaw Czerpak (druzus@polbox.com)

	* controller.c, dataxfer.c, devcfg.c, ser2net.c, ser2net.conf,
	ser2net.8:
	Added support for turning on/off RTS/CTS, XON/XOFF, and LOCAL.
	Also added support for raw LP devices.

2001-10-05  Przemyslaw Czerpak (druzus@polbox.com)

	* controller.c, dataxfer.c, devcfg.c, ser2net.init, ser2net.spec:
	Added an init, and cleaned up a bunch of type warnings.

	* devcfg.c, ser2net.8, ser2net.conf: Added support for RTS/CTS.

2001-08-11  Corey Minyard <minyard@acm.org>

	* devcfg.h, devcfg.c, controller.c, dataxfer.c, dataxfer.h, ser2net.8:
	Ben Adams sent a patch to control the DTR and RTS lines, I rewrote
	it to make a new command to do this (instead of using devconfig,
	which didn't really match the devconfig's operation).

	* configure.in, ser2net.spec: Updated to version 1.5

2001-07-26  Corey Minyard <minyard@acm.org>

	* devcfg.c - Added CREAD to the cflags so the serial port will
	work, patch from Andreas Pfaller.

	* dataxfer.c - Added binary transmission to the list of telnet
	opeions, again from Andreas Pfaller.

2001-07-23  Corey Minyard <minyard@acm.org>

	* devcfg.c, ser2net.8, ser2net.conf  - Added a patch from Martin
	Boese to add CLOCAL and XON/XOFF support as serial port options.

2001-07-03  Corey Minyard <minyard@acm.org>
	